# build-cleaner

./: .gitattributes  .release-it.json  CHANGELOG.md  README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
.github/: copilot-instructions.md
.github/workflows/: build-installers.yml  build.yml
scripts/: sync-tauri-version.mjs
src/: App.tsx  api.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  rules.rs  scanner.rs  store.rs
src/components/: Footer.tsx  Header.tsx  RuleEditor.tsx  ScanList.tsx
