[package]
name = "build-cleaner"
version = "0.2.2"
description = "A tool to clean build directories (Maven, Gradle, Cargo, etc.)"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "build_cleaner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
rayon = "1.10"
tokio = { version = "1", features = ["sync", "rt", "macros"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
